compilador/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    POTENCIA
    DIVISION_ENTERA
    CORCHETE_IZQ
    CORCHETE_DER
    LLAVE_IZQ
    LLAVE_DER
    PUNTO
    PUNTO_COMA
    ARROBA
    ALMOHADILLA
    DOLAR
    PORCENTAJE
    AMPERSAND
    BARRA_VERTICAL
    BACKSLASH
    SLASH
    ADMIRACION
    INTERROGACION
    COMILLASIMPLE
    COMILLADOBLE
    MENOR_MENOR
    MAYOR_MAYOR
    FLECHA
    FLECHA_GORDA
    TILDE
    GUION_BAJO
    PUNTO_PUNTO
    PUNTO_PUNTO_PUNTO
    DOBLE_AMPERSAND
    DOBLE_BARRA
    DOBLE_PUNTO
    DOBLE_IGUAL
    ADMIGUAL
    MENOS_MAYOR
    PORCENTAJE_IGUAL
    MAS_IGUAL
    MENOS_IGUAL
    POR_IGUAL
    DIVIDIDO_IGUAL
    AND_IGUAL
    OR_IGUAL
    XOR_IGUAL
    DESPLAZA_IZQ_IGUAL
    DESPLAZA_DER_IGUAL
    MODULO_IGUAL
    PREGUNTA_DOS_PUNTOS
    AND_BIN
    OR_BIN
    XOR_BIN
    NOT_BIN
    DESPLAZA_IZQ
    DESPLAZA_DER
    INCREMENTO
    DECREMENTO
    FALSE
    NONE
    TRUE
    AS
    ASSERT
    ASYNC
    AWAIT
    BREAK
    CASE
    CLASS
    CONTINUE
    DEL
    ELIF
    EXCEPT
    FINALLY
    FROM
    GLOBAL
    IMPORT
    IS
    LAMBDA
    MATCH
    NONLOCAL
    NOT
    PASS
    RAISE
    RETURN
    TRY
    WITH
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> IDENTIFICADOR ASIGNAR expression
Rule 5     statement -> expression
Rule 6     statement -> IF expression DOS_PUNTOS statements
Rule 7     statement -> IF expression DOS_PUNTOS statements ELSE DOS_PUNTOS statements
Rule 8     statement -> WHILE expression DOS_PUNTOS statements
Rule 9     statement -> FOR IDENTIFICADOR IN expression DOS_PUNTOS statements
Rule 10    statement -> DEF IDENTIFICADOR PARENTESIS_IZQ params PARENTESIS_DER DOS_PUNTOS statements
Rule 11    params -> params COMA IDENTIFICADOR
Rule 12    params -> IDENTIFICADOR
Rule 13    params -> <empty>
Rule 14    expression -> expression MAS expression
Rule 15    expression -> expression MENOS expression
Rule 16    expression -> expression POR expression
Rule 17    expression -> expression DIVIDIDO expression
Rule 18    expression -> expression MODULO expression
Rule 19    expression -> expression IGUAL expression
Rule 20    expression -> expression DIFERENTE expression
Rule 21    expression -> expression MENOR expression
Rule 22    expression -> expression MENORIGUAL expression
Rule 23    expression -> expression MAYOR expression
Rule 24    expression -> expression MAYORIGUAL expression
Rule 25    expression -> expression AND expression
Rule 26    expression -> expression OR expression
Rule 27    expression -> MENOS expression
Rule 28    expression -> PARENTESIS_IZQ expression PARENTESIS_DER
Rule 29    expression -> NUMERO
Rule 30    expression -> CADENA
Rule 31    expression -> IDENTIFICADOR
Rule 32    expression -> IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER
Rule 33    args -> args COMA expression
Rule 34    args -> expression
Rule 35    args -> <empty>

Terminals, with rules where they appear

ADMIGUAL             : 
ADMIRACION           : 
ALMOHADILLA          : 
AMPERSAND            : 
AND                  : 25
AND_BIN              : 
AND_IGUAL            : 
ARROBA               : 
AS                   : 
ASIGNAR              : 4
ASSERT               : 
ASYNC                : 
AWAIT                : 
BACKSLASH            : 
BARRA_VERTICAL       : 
BREAK                : 
CADENA               : 30
CASE                 : 
CLASS                : 
COMA                 : 11 33
COMILLADOBLE         : 
COMILLASIMPLE        : 
CONTINUE             : 
CORCHETE_DER         : 
CORCHETE_IZQ         : 
DECREMENTO           : 
DEF                  : 10
DEL                  : 
DESPLAZA_DER         : 
DESPLAZA_DER_IGUAL   : 
DESPLAZA_IZQ         : 
DESPLAZA_IZQ_IGUAL   : 
DIFERENTE            : 20
DIVIDIDO             : 17
DIVIDIDO_IGUAL       : 
DIVISION_ENTERA      : 
DOBLE_AMPERSAND      : 
DOBLE_BARRA          : 
DOBLE_IGUAL          : 
DOBLE_PUNTO          : 
DOLAR                : 
DOS_PUNTOS           : 6 7 7 8 9 10
ELIF                 : 
ELSE                 : 7
EXCEPT               : 
FALSE                : 
FINALLY              : 
FLECHA               : 
FLECHA_GORDA         : 
FOR                  : 9
FROM                 : 
GLOBAL               : 
GUION_BAJO           : 
IDENTIFICADOR        : 4 9 10 11 12 31 32
IF                   : 6 7
IGUAL                : 19
IMPORT               : 
IN                   : 9
INCREMENTO           : 
INTERROGACION        : 
IS                   : 
LAMBDA               : 
LLAVE_DER            : 
LLAVE_IZQ            : 
MAS                  : 14
MAS_IGUAL            : 
MATCH                : 
MAYOR                : 23
MAYORIGUAL           : 24
MAYOR_MAYOR          : 
MENOR                : 21
MENORIGUAL           : 22
MENOR_MENOR          : 
MENOS                : 15 27
MENOS_IGUAL          : 
MENOS_MAYOR          : 
MODULO               : 18
MODULO_IGUAL         : 
NONE                 : 
NONLOCAL             : 
NOT                  : 
NOT_BIN              : 
NUMERO               : 29
OR                   : 26
OR_BIN               : 
OR_IGUAL             : 
PARENTESIS_DER       : 10 28 32
PARENTESIS_IZQ       : 10 28 32
PASS                 : 
POR                  : 16
PORCENTAJE           : 
PORCENTAJE_IGUAL     : 
POR_IGUAL            : 
POTENCIA             : 
PREGUNTA_DOS_PUNTOS  : 
PUNTO                : 
PUNTO_COMA           : 
PUNTO_PUNTO          : 
PUNTO_PUNTO_PUNTO    : 
RAISE                : 
RETURN               : 
SLASH                : 
TILDE                : 
TRUE                 : 
TRY                  : 
WHILE                : 8
WITH                 : 
XOR_BIN              : 
XOR_IGUAL            : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

args                 : 32 33
expression           : 4 5 6 7 8 9 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 33 34
params               : 10 11
program              : 0
statement            : 2 3
statements           : 1 2 6 7 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . IDENTIFICADOR ASIGNAR expression
    (5) statement -> . expression
    (6) statement -> . IF expression DOS_PUNTOS statements
    (7) statement -> . IF expression DOS_PUNTOS statements ELSE DOS_PUNTOS statements
    (8) statement -> . WHILE expression DOS_PUNTOS statements
    (9) statement -> . FOR IDENTIFICADOR IN expression DOS_PUNTOS statements
    (10) statement -> . DEF IDENTIFICADOR PARENTESIS_IZQ params PARENTESIS_DER DOS_PUNTOS statements
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    IDENTIFICADOR   shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    DEF             shift and go to state 9
    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . IDENTIFICADOR ASIGNAR expression
    (5) statement -> . expression
    (6) statement -> . IF expression DOS_PUNTOS statements
    (7) statement -> . IF expression DOS_PUNTOS statements ELSE DOS_PUNTOS statements
    (8) statement -> . WHILE expression DOS_PUNTOS statements
    (9) statement -> . FOR IDENTIFICADOR IN expression DOS_PUNTOS statements
    (10) statement -> . DEF IDENTIFICADOR PARENTESIS_IZQ params PARENTESIS_DER DOS_PUNTOS statements
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    $end            reduce using rule 1 (program -> statements .)
    IDENTIFICADOR   shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    DEF             shift and go to state 9
    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 5

state 3

    (3) statements -> statement .

    IDENTIFICADOR   reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    MENOS           reduce using rule 3 (statements -> statement .)
    PARENTESIS_IZQ  reduce using rule 3 (statements -> statement .)
    NUMERO          reduce using rule 3 (statements -> statement .)
    CADENA          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> IDENTIFICADOR . ASIGNAR expression
    (31) expression -> IDENTIFICADOR .
    (32) expression -> IDENTIFICADOR . PARENTESIS_IZQ args PARENTESIS_DER

  ! shift/reduce conflict for PARENTESIS_IZQ resolved as shift
    ASIGNAR         shift and go to state 15
    MAS             reduce using rule 31 (expression -> IDENTIFICADOR .)
    MENOS           reduce using rule 31 (expression -> IDENTIFICADOR .)
    POR             reduce using rule 31 (expression -> IDENTIFICADOR .)
    DIVIDIDO        reduce using rule 31 (expression -> IDENTIFICADOR .)
    MODULO          reduce using rule 31 (expression -> IDENTIFICADOR .)
    IGUAL           reduce using rule 31 (expression -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 31 (expression -> IDENTIFICADOR .)
    MENOR           reduce using rule 31 (expression -> IDENTIFICADOR .)
    MENORIGUAL      reduce using rule 31 (expression -> IDENTIFICADOR .)
    MAYOR           reduce using rule 31 (expression -> IDENTIFICADOR .)
    MAYORIGUAL      reduce using rule 31 (expression -> IDENTIFICADOR .)
    AND             reduce using rule 31 (expression -> IDENTIFICADOR .)
    OR              reduce using rule 31 (expression -> IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 31 (expression -> IDENTIFICADOR .)
    IF              reduce using rule 31 (expression -> IDENTIFICADOR .)
    WHILE           reduce using rule 31 (expression -> IDENTIFICADOR .)
    FOR             reduce using rule 31 (expression -> IDENTIFICADOR .)
    DEF             reduce using rule 31 (expression -> IDENTIFICADOR .)
    NUMERO          reduce using rule 31 (expression -> IDENTIFICADOR .)
    CADENA          reduce using rule 31 (expression -> IDENTIFICADOR .)
    $end            reduce using rule 31 (expression -> IDENTIFICADOR .)
    ELSE            reduce using rule 31 (expression -> IDENTIFICADOR .)
    PARENTESIS_IZQ  shift and go to state 16

  ! PARENTESIS_IZQ  [ reduce using rule 31 (expression -> IDENTIFICADOR .) ]


state 5

    (5) statement -> expression .
    (14) expression -> expression . MAS expression
    (15) expression -> expression . MENOS expression
    (16) expression -> expression . POR expression
    (17) expression -> expression . DIVIDIDO expression
    (18) expression -> expression . MODULO expression
    (19) expression -> expression . IGUAL expression
    (20) expression -> expression . DIFERENTE expression
    (21) expression -> expression . MENOR expression
    (22) expression -> expression . MENORIGUAL expression
    (23) expression -> expression . MAYOR expression
    (24) expression -> expression . MAYORIGUAL expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

  ! shift/reduce conflict for MENOS resolved as shift
    IDENTIFICADOR   reduce using rule 5 (statement -> expression .)
    IF              reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    FOR             reduce using rule 5 (statement -> expression .)
    DEF             reduce using rule 5 (statement -> expression .)
    PARENTESIS_IZQ  reduce using rule 5 (statement -> expression .)
    NUMERO          reduce using rule 5 (statement -> expression .)
    CADENA          reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    ELSE            reduce using rule 5 (statement -> expression .)
    MAS             shift and go to state 17
    MENOS           shift and go to state 18
    POR             shift and go to state 19
    DIVIDIDO        shift and go to state 20
    MODULO          shift and go to state 21
    IGUAL           shift and go to state 22
    DIFERENTE       shift and go to state 23
    MENOR           shift and go to state 24
    MENORIGUAL      shift and go to state 25
    MAYOR           shift and go to state 26
    MAYORIGUAL      shift and go to state 27
    AND             shift and go to state 28
    OR              shift and go to state 29

  ! MENOS           [ reduce using rule 5 (statement -> expression .) ]


state 6

    (6) statement -> IF . expression DOS_PUNTOS statements
    (7) statement -> IF . expression DOS_PUNTOS statements ELSE DOS_PUNTOS statements
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 30

state 7

    (8) statement -> WHILE . expression DOS_PUNTOS statements
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 32

state 8

    (9) statement -> FOR . IDENTIFICADOR IN expression DOS_PUNTOS statements

    IDENTIFICADOR   shift and go to state 33


state 9

    (10) statement -> DEF . IDENTIFICADOR PARENTESIS_IZQ params PARENTESIS_DER DOS_PUNTOS statements

    IDENTIFICADOR   shift and go to state 34


state 10

    (28) expression -> PARENTESIS_IZQ . expression PARENTESIS_DER
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 35

state 11

    (27) expression -> MENOS . expression
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 36

state 12

    (29) expression -> NUMERO .

    MAS             reduce using rule 29 (expression -> NUMERO .)
    MENOS           reduce using rule 29 (expression -> NUMERO .)
    POR             reduce using rule 29 (expression -> NUMERO .)
    DIVIDIDO        reduce using rule 29 (expression -> NUMERO .)
    MODULO          reduce using rule 29 (expression -> NUMERO .)
    IGUAL           reduce using rule 29 (expression -> NUMERO .)
    DIFERENTE       reduce using rule 29 (expression -> NUMERO .)
    MENOR           reduce using rule 29 (expression -> NUMERO .)
    MENORIGUAL      reduce using rule 29 (expression -> NUMERO .)
    MAYOR           reduce using rule 29 (expression -> NUMERO .)
    MAYORIGUAL      reduce using rule 29 (expression -> NUMERO .)
    AND             reduce using rule 29 (expression -> NUMERO .)
    OR              reduce using rule 29 (expression -> NUMERO .)
    IDENTIFICADOR   reduce using rule 29 (expression -> NUMERO .)
    IF              reduce using rule 29 (expression -> NUMERO .)
    WHILE           reduce using rule 29 (expression -> NUMERO .)
    FOR             reduce using rule 29 (expression -> NUMERO .)
    DEF             reduce using rule 29 (expression -> NUMERO .)
    PARENTESIS_IZQ  reduce using rule 29 (expression -> NUMERO .)
    NUMERO          reduce using rule 29 (expression -> NUMERO .)
    CADENA          reduce using rule 29 (expression -> NUMERO .)
    $end            reduce using rule 29 (expression -> NUMERO .)
    DOS_PUNTOS      reduce using rule 29 (expression -> NUMERO .)
    PARENTESIS_DER  reduce using rule 29 (expression -> NUMERO .)
    ELSE            reduce using rule 29 (expression -> NUMERO .)
    COMA            reduce using rule 29 (expression -> NUMERO .)


state 13

    (30) expression -> CADENA .

    MAS             reduce using rule 30 (expression -> CADENA .)
    MENOS           reduce using rule 30 (expression -> CADENA .)
    POR             reduce using rule 30 (expression -> CADENA .)
    DIVIDIDO        reduce using rule 30 (expression -> CADENA .)
    MODULO          reduce using rule 30 (expression -> CADENA .)
    IGUAL           reduce using rule 30 (expression -> CADENA .)
    DIFERENTE       reduce using rule 30 (expression -> CADENA .)
    MENOR           reduce using rule 30 (expression -> CADENA .)
    MENORIGUAL      reduce using rule 30 (expression -> CADENA .)
    MAYOR           reduce using rule 30 (expression -> CADENA .)
    MAYORIGUAL      reduce using rule 30 (expression -> CADENA .)
    AND             reduce using rule 30 (expression -> CADENA .)
    OR              reduce using rule 30 (expression -> CADENA .)
    IDENTIFICADOR   reduce using rule 30 (expression -> CADENA .)
    IF              reduce using rule 30 (expression -> CADENA .)
    WHILE           reduce using rule 30 (expression -> CADENA .)
    FOR             reduce using rule 30 (expression -> CADENA .)
    DEF             reduce using rule 30 (expression -> CADENA .)
    PARENTESIS_IZQ  reduce using rule 30 (expression -> CADENA .)
    NUMERO          reduce using rule 30 (expression -> CADENA .)
    CADENA          reduce using rule 30 (expression -> CADENA .)
    $end            reduce using rule 30 (expression -> CADENA .)
    DOS_PUNTOS      reduce using rule 30 (expression -> CADENA .)
    PARENTESIS_DER  reduce using rule 30 (expression -> CADENA .)
    ELSE            reduce using rule 30 (expression -> CADENA .)
    COMA            reduce using rule 30 (expression -> CADENA .)


state 14

    (2) statements -> statements statement .

    IDENTIFICADOR   reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    MENOS           reduce using rule 2 (statements -> statements statement .)
    PARENTESIS_IZQ  reduce using rule 2 (statements -> statements statement .)
    NUMERO          reduce using rule 2 (statements -> statements statement .)
    CADENA          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)


state 15

    (4) statement -> IDENTIFICADOR ASIGNAR . expression
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 37

state 16

    (32) expression -> IDENTIFICADOR PARENTESIS_IZQ . args PARENTESIS_DER
    (33) args -> . args COMA expression
    (34) args -> . expression
    (35) args -> .
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    PARENTESIS_DER  reduce using rule 35 (args -> .)
    COMA            reduce using rule 35 (args -> .)
    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    args                           shift and go to state 38
    expression                     shift and go to state 39

state 17

    (14) expression -> expression MAS . expression
    (14) expression -> . expression MAS expression
    (15) expression -> . expression MENOS expression
    (16) expression -> . expression POR expression
    (17) expression -> . expression DIVIDIDO expression
    (18) expression -> . expression MODULO expression
    (19) expression -> . expression IGUAL expression
    (20) expression -> . expression DIFERENTE expression
    (21) expression -> . expression MENOR expression
    (22) expression -> . expression MENORIGUAL expression
    (23) expression -> . expression MAYOR expression
    (24) expression -> . expression MAYORIGUAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . MENOS expression
    (28) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (29) expression -> . NUMERO
    (30) expression -> . CADENA
    (31) expression -> . IDENTIFICADOR
    (32) expression -> . IDENTIFICADOR PARENTESIS_IZQ args PARENTESIS_DER

    MENOS           shift and go to state 11
    PARENTESIS_IZQ  shift and go to state 10
    NUMERO          shift and go to state 12
    CADENA          shift and go to state 13
    IDENTIFICADOR   shift and go to state 31

    expression                     shift and go to state 40

state 18
